add skill standard 114k

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5f7eb8d3",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Số dòng có skills_standard rỗng: 280\n",
-      "Tổng số dòng: 114462\n",
-      "Tỷ lệ phần trăm dòng có skills_standard rỗng: 0.24%\n"
+      "Số dòng có skills_standard rỗng: 281\n",
+      "Tổng số dòng: 114287\n",
+      "Tỷ lệ phần trăm dòng có skills_standard rỗng: 0.25%\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
     "\n",
     "# Đọc dữ liệu từ file CSV\n",
     "file1 = spark.read.option(\"header\", \"true\").csv(\"./skills.csv\")\n",
-    "file2 = spark.read.option(\"header\", \"true\").csv(\"./combined_output_no_url.csv\")\n",
+    "file2 = spark.read.option(\"header\", \"true\").csv(\"./name-normalize/combined_output_no_url_normalized_vietnamese.csv\")\n",
     "\n",
     "# Chuẩn bị file1 với cột skill và standard\n",
     "file1 = file1.select(\"skill\", \"standard\")\n",
@@ -61,7 +61,7 @@
     "    # for skill in skills_list:\n",
     "    #     skill = skill.strip().lower()\n",
     "        \n",
-    "        # Tìm kiếm standard cho skill trong broadcast data\n",
+    "    # Tìm kiếm standard cho skill trong broadcast data\n",
     "    for row in broadcast_file1.value:\n",
     "        if row['skill'].lower() in skills_list:\n",
     "            standard_list.append(row['standard'])\n",
@@ -72,10 +72,11 @@
     "add_skills_standard_udf = F.udf(add_skills_standard, StringType())\n",
     "\n",
     "# Thêm cột skills_standard vào file2\n",
-    "file2 = file2.withColumn(\"skills_standard\", add_skills_standard_udf(col(\"job_skills\")))\n",
+    "# file2 = file2.withColumn(\"skills_standard\", add_skills_standard_udf(col(\"job_skills\")))\n",
+    "file2 = file2.withColumn(\"job_skills\", add_skills_standard_udf(col(\"job_skills\")))\n",
     "\n",
     "# Đếm số dòng có trường skills_standard rỗng hoặc null\n",
-    "count_null_or_empty = file2.filter((col(\"skills_standard\").isNull()) | (col(\"skills_standard\") == \"\")).count()\n",
+    "count_null_or_empty = file2.filter((col(\"job_skills\").isNull()) | (col(\"job_skills\") == \"\")).count()\n",
     "\n",
     "# Đếm tổng số dòng\n",
     "total_rows = file2.count()\n",
@@ -94,63 +95,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9ca71bc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Lọc các dòng có skills_standard rỗng hoặc null\n",
-    "df = file2.na.replace(\"\", \"None\", subset=[\"skills_standard\"])\n",
+    "df = file2.na.replace(\"\", \"None\", subset=[\"job_skills\"])\n",
     "# empty_skills_standard_df = file2.filter((col(\"skills_standard\").isNull()) | (col(\"skills_standard\") == \"\"))\n",
     "\n",
     "# # Ghi ra file CSV mới\n",
-    "df.write.option(\"header\", \"true\").csv(\"empty_skills_standard_output\")\n"
+    "df.write.option(\"header\", \"true\").csv(\"skills_standard_output.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "b7152386",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(skills_standard='Management Skills,Training,Office,Planning,Budget Estimation,Project Management'),\n",
-       " Row(skills_standard='Good health,Responsibility,Hardworking,Honesty,Attention to Detail,Business Skills'),\n",
-       " Row(skills_standard='Veterinary,Persuasion,Sale,Honesty,Good Health,University Graduate,Business Skills,Communication Skills,Sales Skills'),\n",
-       " Row(skills_standard='Independent Work,Responsibility,College Graduate,Progressive,Hardworking,Honesty,University Graduate,Civil Engineering,XD,Passion,HR'),\n",
-       " Row(skills_standard='Persuasion,Enthusiastic Learner,Good-looking,Hardworking,Has Smartphone,Real Estate,Business Skills,Communication Skills,Sales Skills,None,Negotiation'),\n",
-       " Row(skills_standard='College Graduate,Maintenace,Electromechanics,University Graduate,Construction'),\n",
-       " Row(skills_standard='Misa,Secondary School Graduate'),\n",
-       " Row(skills_standard='Teamwork,Good health,Responsibility,Management Skills,Supervision,Planning,Environmental,Problem Solving,Honesty,Attention to Detail,University Graduate,Construction,Communication Skills'),\n",
-       " Row(skills_standard='Management Skills,Training,University Graduate,Business Skills,Civil Engineering,Financial Skills,HR'),\n",
-       " Row(skills_standard='Management Skills,Good-looking,Hardworking,Sale,Proactive,Networking,Communication Skills,Negotiation'),\n",
-       " Row(skills_standard='Responsibility,College Graduate,Secondary School Graduate,Early Childhood Education,Environmental,University Graduate,Scenario Handling,Communication Skills,Civil Engineering,Creativity'),\n",
-       " Row(skills_standard='Teamwork,Google Ads,Responsibility,SEO,ERP,Environmental,Honesty,English,MS Office,Excel,Illustrator,Photoshop,Marketing,Korean'),\n",
-       " Row(skills_standard='Dynamism,Negotiation,Persuasion,Training,Enthusiastic Learner,Real Estate,Business Skills,Communication Skills,Sales Skills,None,Financial Skills,Professional Demeanor'),\n",
-       " Row(skills_standard='Presentation,Office,Media,Presentation Skills,Problem Solving,Law,English,University Graduate,Scenario Handling,Marketing,Business Skills,Communication Skills,Negotiation'),\n",
-       " Row(skills_standard='Independent Work,Responsibility,College Graduate,Management Skills,Honesty,Attention to Detail,Excel,University Graduate,Misa,Accounting,Financial Skills'),\n",
-       " Row(skills_standard='Training,Progressive,Hardworking,Business Skills,Communication Skills'),\n",
-       " Row(skills_standard='Responsibility,Management Skills,Hardworking,Honesty,English,University Graduate,Business Skills,Communication Skills,Financial Skills,Logical Thinking'),\n",
-       " Row(skills_standard='Civil Engineering,Honesty,Management Skills,Construction'),\n",
-       " Row(skills_standard='Independent Work,Office,Excel,Marketing,Business Skills,Negotiation'),\n",
-       " Row(skills_standard='Civil Engineering,University Graduate')]"
+       "[Row(job_skills='Management Skills,Training,Office,Planning,Budget Estimation,Project Management'),\n",
+       " Row(job_skills='Good health,Responsibility,Hardworking,Honesty,Attention to Detail,Business Skills'),\n",
+       " Row(job_skills='Veterinary,Persuasion,Sale,Honesty,Good Health,University Graduate,Business Skills,Communication Skills,Sales Skills'),\n",
+       " Row(job_skills='Independent Work,Responsibility,College Graduate,Progressive,Hardworking,Honesty,University Graduate,Civil Engineering,XD,Passion,HR'),\n",
+       " Row(job_skills='Persuasion,Enthusiastic Learner,Good-looking,Hardworking,Has Smartphone,Real Estate,Business Skills,Communication Skills,Sales Skills,None,Negotiation'),\n",
+       " Row(job_skills='College Graduate,Maintenace,Electromechanics,University Graduate,Construction'),\n",
+       " Row(job_skills='Misa,Secondary School Graduate'),\n",
+       " Row(job_skills='Teamwork,Good health,Responsibility,Management Skills,Supervision,Planning,Environmental,Problem Solving,Honesty,Attention to Detail,University Graduate,Construction,Communication Skills'),\n",
+       " Row(job_skills='Management Skills,Training,University Graduate,Business Skills,Civil Engineering,Financial Skills,HR'),\n",
+       " Row(job_skills='Management Skills,Good-looking,Hardworking,Sale,Proactive,Networking,Communication Skills,Negotiation'),\n",
+       " Row(job_skills='Responsibility,College Graduate,Secondary School Graduate,Early Childhood Education,Environmental,University Graduate,Scenario Handling,Communication Skills,Civil Engineering,Creativity'),\n",
+       " Row(job_skills='Teamwork,Google Ads,Responsibility,SEO,ERP,Environmental,Honesty,English,MS Office,Excel,Illustrator,Photoshop,Marketing,Korean'),\n",
+       " Row(job_skills='Dynamism,Negotiation,Persuasion,Training,Enthusiastic Learner,Real Estate,Business Skills,Communication Skills,Sales Skills,None,Financial Skills,Professional Demeanor'),\n",
+       " Row(job_skills='Presentation,Office,Media,Presentation Skills,Problem Solving,Law,English,University Graduate,Scenario Handling,Marketing,Business Skills,Communication Skills,Negotiation'),\n",
+       " Row(job_skills='Independent Work,Responsibility,College Graduate,Management Skills,Honesty,Attention to Detail,Excel,University Graduate,Misa,Accounting,Financial Skills'),\n",
+       " Row(job_skills='Training,Progressive,Hardworking,Business Skills,Communication Skills'),\n",
+       " Row(job_skills='Responsibility,Management Skills,Hardworking,Honesty,English,University Graduate,Business Skills,Communication Skills,Financial Skills,Logical Thinking'),\n",
+       " Row(job_skills='Civil Engineering,Honesty,Management Skills,Construction'),\n",
+       " Row(job_skills='Independent Work,Office,Excel,Marketing,Business Skills,Negotiation'),\n",
+       " Row(job_skills='Civil Engineering,University Graduate')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "df.select(\"skills_standard\").take(20)"
+    "df.select(\"job_skills\").take(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "9cfab40d",
    "metadata": {},
    "outputs": [
@@ -158,18 +159,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17562\n"
+      "17389\n"
      ]
     }
    ],
    "source": [
-    "none_skills_standard_df = df.filter((col(\"skills_standard\") == \"None\"))\n",
+    "none_skills_standard_df = df.filter((col(\"job_skills\") == \"None\"))\n",
     "print(none_skills_standard_df.count())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "5da5b0ac",
    "metadata": {},
    "outputs": [
@@ -182,7 +183,7 @@
     }
    ],
    "source": [
-    "blank_skills_standard_df = df.filter((col(\"skills_standard\") == \"\"))\n",
+    "blank_skills_standard_df = df.filter((col(\"job_skills\") == \"\"))\n",
     "print(blank_skills_standard_df.count())"
    ]
   }
