--- a/process_title.ipynb
+++ b/process_title.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Đã hoàn thành việc chuẩn hóa tiêu đề và lưu vào file 'linkedin_job_postings_name_normalize.csv'.\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import udf\n",
@@ -21,7 +29,9 @@
     "    .option(\"multiLine\", \"true\") \\\n",
     "    .option(\"escape\", \"\\\\\") \\\n",
     "    .option(\"quote\", \"\\\"\") \\\n",
-    "    .csv('/content/combined_output_no_url.csv')\n",
+    "    .csv('./archive/linkedin_job_postings.csv')\n",
+    "\n",
+    "job_data = job_data.repartition(30)\n",
     "\n",
     "professions = [\n",
     "  { \"name\": \"University Teacher\", \"keywords\": [\"University\", \"Academic\", \"Education\", \"Professor\", \"Teaching\"] },\n",
@@ -265,10 +275,11 @@
     "job_data_filtered = job_data_normalized.filter(job_data_normalized['job_title'] != 'Unknown')\n",
     "\n",
     "# Sử dụng pandas để tránh lỗi Hadoop\n",
-    "pandas_df = job_data_filtered.toPandas()\n",
-    "pandas_df.to_csv('combined_output_no_url_normalized.csv', index=False)\n",
+    "# pandas_df = job_data_filtered.toPandas()\n",
+    "# pandas_df.to_csv('combined_output_no_url_normalized.csv', index=False)\n",
+    "job_data_filtered.write.option(\"header\", \"true\").csv(\"linkedin_job_postings_name_normalize.csv\")\n",
     "\n",
-    "print(\"Đã hoàn thành việc chuẩn hóa tiêu đề và lưu vào file 'jobs_data_careerviet2_final_normalized.csv'.\")\n",
+    "print(\"Đã hoàn thành việc chuẩn hóa tiêu đề và lưu vào file 'linkedin_job_postings_name_normalize.csv'.\")\n",
     "\n",
     "spark.stop()"
    ]
@@ -608,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
